// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render image 1`] = `
<transition-stub
  name="mi-fade"
  appear="true"
  persisted="false"
  css="true"
  class="mi-image-preview__overlay"
  role="button"
  tabindex="0"
>
  <div class="mi-overlay">
  </div>
</transition-stub>
<transition-stub
  name="mi-fade"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popup--center mi-image-preview"
  >
    <div class="mi-swipe mi-image-preview__swipe">
      <div
        style="transition-duration: 300ms; transform: translateX(0px);"
        class="mi-swipe__track"
      >
        <div class="mi-swipe-item mi-image-preview__swipe-item">
        </div>
        <div class="mi-swipe-item mi-image-preview__swipe-item">
        </div>
        <div class="mi-swipe-item mi-image-preview__swipe-item">
        </div>
      </div>
    </div>
    <div class="mi-image-preview__index">
      1 / 3
    </div>
  </div>
</transition-stub>
`;

exports[`should change close icon position when using close-icon-position prop 1`] = `
"<i class="mi-badge__wrapper mi-icon mi-icon-clear mi-image-preview__close-icon mi-image-preview__close-icon--top-left mi-haptics-feedback" role="button">
  <!---->
  <!---->
  <!---->
</i>"
`;

exports[`should change close icon when using close-icon prop 1`] = `
"<i class="mi-badge__wrapper mi-icon mi-icon-success mi-image-preview__close-icon mi-image-preview__close-icon--top-right mi-haptics-feedback" role="button">
  <!---->
  <!---->
  <!---->
</i>"
`;

exports[`should render cover slot correctly 1`] = `
<transition-stub
  name="mi-fade"
  appear="true"
  persisted="false"
  css="true"
  class="mi-image-preview__overlay"
  role="button"
  tabindex="0"
>
  <div class="mi-overlay">
  </div>
</transition-stub>
<transition-stub
  name="mi-fade"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popup--center mi-image-preview"
  >
    <div class="mi-swipe mi-image-preview__swipe">
      <div
        style="transition-duration: 300ms; transform: translateX(0px);"
        class="mi-swipe__track"
      >
      </div>
    </div>
    <div class="mi-image-preview__index">
      1 / 0
    </div>
    <div class="mi-image-preview__cover">
      Custom Cover
    </div>
  </div>
</transition-stub>
`;

exports[`should render index slot correctly 1`] = `
<div class="mi-image-preview__index">
  Custom Index: 0
</div>
`;

exports[`should swipe to current index after calling the swipeTo method 1`] = `
<div class="mi-image-preview__index">
  3 / 3
</div>
`;

exports[`zoom in and drag image to move 1`] = `
<div
  class="mi-image mi-image-preview__image"
  style="transition-duration: .3s;"
>
  <img
    src="https://fastly.jsdelivr.net/npm/@vant/assets/apple-1.jpeg"
    class="mi-image__img"
    style="object-fit: contain;"
  >
  <div class="mi-image__loading">
    <div
      class="mi-loading mi-loading--spinner"
      aria-live="polite"
      aria-busy="true"
    >
      <span class="mi-loading__spinner mi-loading__spinner--spinner">
        <i class="mi-loading__line mi-loading__line--1">
        </i>
        <i class="mi-loading__line mi-loading__line--2">
        </i>
        <i class="mi-loading__line mi-loading__line--3">
        </i>
        <i class="mi-loading__line mi-loading__line--4">
        </i>
        <i class="mi-loading__line mi-loading__line--5">
        </i>
        <i class="mi-loading__line mi-loading__line--6">
        </i>
        <i class="mi-loading__line mi-loading__line--7">
        </i>
        <i class="mi-loading__line mi-loading__line--8">
        </i>
        <i class="mi-loading__line mi-loading__line--9">
        </i>
        <i class="mi-loading__line mi-loading__line--10">
        </i>
        <i class="mi-loading__line mi-loading__line--11">
        </i>
        <i class="mi-loading__line mi-loading__line--12">
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`zoom in and drag image to move 2`] = `
<div
  class="mi-image mi-image-preview__image"
  style="transition-duration: .3s;"
>
  <img
    src="https://fastly.jsdelivr.net/npm/@vant/assets/apple-1.jpeg"
    class="mi-image__img"
    style="object-fit: contain;"
  >
  <div class="mi-image__loading">
    <div
      class="mi-loading mi-loading--spinner"
      aria-live="polite"
      aria-busy="true"
    >
      <span class="mi-loading__spinner mi-loading__spinner--spinner">
        <i class="mi-loading__line mi-loading__line--1">
        </i>
        <i class="mi-loading__line mi-loading__line--2">
        </i>
        <i class="mi-loading__line mi-loading__line--3">
        </i>
        <i class="mi-loading__line mi-loading__line--4">
        </i>
        <i class="mi-loading__line mi-loading__line--5">
        </i>
        <i class="mi-loading__line mi-loading__line--6">
        </i>
        <i class="mi-loading__line mi-loading__line--7">
        </i>
        <i class="mi-loading__line mi-loading__line--8">
        </i>
        <i class="mi-loading__line mi-loading__line--9">
        </i>
        <i class="mi-loading__line mi-loading__line--10">
        </i>
        <i class="mi-loading__line mi-loading__line--11">
        </i>
        <i class="mi-loading__line mi-loading__line--12">
        </i>
      </span>
    </div>
  </div>
</div>
`;
